Implemented 'display()' udf and the underlying terminlogy lookup functionality for standard properties.